--- a/Lancer/appsettings.json
+++ b/Lancer/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "FreeLancerDataContent": "Server=(localdb)\\mssqllocaldb;Database=Freelancer; Trusted_Connection=True;"
+        "FreeLancerDataContext": "Server=(localdb)\\mssqllocaldb;Database=Freelancer; Trusted_Connection=True;"
     },
     "Logging": {
         "LogLevel": {
