--- a/Lancer/Properties/launchSettings.json
+++ b/Lancer/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:51259",
       "sslPort": 44347
